--- a/Source/MBMS_APP/MBMS_APP.csproj
+++ b/Source/MBMS_APP/MBMS_APP.csproj
@@ -350,6 +350,8 @@
     <Content Include="assets\vendor\fontawesome\webfonts\fa-solid-900.woff2" />
     <Content Include="assets\vendor\fontawesome\webfonts\fa-v4compatibility.ttf" />
     <Content Include="assets\vendor\fontawesome\webfonts\fa-v4compatibility.woff2" />
+    <Content Include="WebUI\Support_Data\Organization.aspx" />
+    <Content Include="WebUI\Support_Data\Role.aspx" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -487,6 +489,20 @@
     </Compile>
     <Compile Include="WebUI\Staff\ViewStaff.aspx.designer.cs">
       <DependentUpon>ViewStaff.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebUI\Support_Data\Organization.aspx.cs">
+      <DependentUpon>Organization.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebUI\Support_Data\Organization.aspx.designer.cs">
+      <DependentUpon>Organization.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebUI\Support_Data\Role.aspx.cs">
+      <DependentUpon>Role.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebUI\Support_Data\Role.aspx.designer.cs">
+      <DependentUpon>Role.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
