--- a/Source/MBMS_APP/packages.config
+++ b/Source/MBMS_APP/packages.config
@@ -12,9 +12,32 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Authorization" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Components" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Components.Analyzers" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Components.Forms" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Components.Web" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Metadata" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.0" targetFramework="net48" />
+  <package id="Microsoft.JSInterop" version="3.1.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="SweetAlert2" version="1.0.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="4.7.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
