--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@
 /Source/MBMS_APP/obj/Debug/MBMS_APP.csproj.AssemblyReference.cache
 /Source/MBMS_APP/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /Source/MBMS_APP/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+/Source/MBMS_APP.DataAccess/MBMS_APP.DataAccess.csproj.user
+/.gitignore
